# SimplegRPC

./: Cargo.toml  build.rs
proto/: payment.proto
